@@ -2319,6 +2319,7 @@ Debugged requests are ignored."
           ((:write-string output &optional target)
            (slime-write-string output target))
           ((:emacs-rex form package thread continuation)
+           (slime-check-eval-form form)
            (when (and (slime-use-sigint-for-interrupt) (slime-busy-p))
              (message "; pipelined request... %S" form))
            (let ((id (incf (slime-continuation-counter))))
@@ -6459,14 +6460,18 @@ CL:MACROEXPAND."
 (defun slime-quit ()
   (error "Not implemented properly.  Use `slime-interrupt' instead."))
 
-(defun slime-quit-lisp (&optional keep-buffers)
+(defun slime-quit-lisp (&optional kill)
   "Quit lisp, kill the inferior process and associated buffers."
-  (interactive)
+  (interactive "P")
   (slime-eval-async '(swank:quit-lisp))
-  (let ((connection (slime-connection)))
+  (let* ((connection (slime-connection))
+         (process (slime-inferior-process connection)))
     (kill-buffer (slime-output-buffer))
     (set-process-filter connection  nil)
-    (set-process-sentinel connection 'slime-quit-sentinel)))
+    (set-process-sentinel connection 'slime-quit-sentinel)
+    (when (and kill process)
+      (sleep-for 0.2)
+      (kill-process process))))
 
 (defun slime-quit-sentinel (process message)
   (assert (process-status process) 'closed)
@@ -7476,9 +7481,13 @@ was called originally."
 
 (defun slime-quit-connection-at-point (connection)
   (interactive (list (slime-connection-at-point)))
-  (let ((slime-dispatching-connection connection))
-    (slime-quit-lisp)
+  (let ((slime-dispatching-connection connection)
+        (end (time-add (current-time) (seconds-to-time 3))))
+    (slime-quit-lisp t)
     (while (memq connection slime-net-processes)
+      (when (time-less-p end (current-time))
+        (message "Quit timeout expired.  Disconnecting.")
+        (delete-process connection))
       (sit-for 0 100)))
   (slime-update-connection-list))
 
